overlays/testing/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes
  labels:
    app: web
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  minReadySeconds: 15
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: hello-kubernetes
          image: paulbouwer/hello-kubernetes:1.5
          resources:
              limits:
                memory: "512Mi"
                cpu: "512m"
              requests:
                memory: "512Mi"
                cpu: "512m"
          ports:
          - containerPort: 8080
